@@ -1,6 +1,7 @@
 2.6.0  Will Entriken <cameralife AT phor.net>
 * Support for Gallery Remote API (upload from iPhoto, DigiKam, ...)
-* Microformats, RSS feeds, Sitemaps
+* Microformats, Sitemaps, OpenSearch
+* RSS feeds, supports iPhoto photocasting
 * Allow multiple photos with same file name!
 * Photo keywords with delicious-like keyword editor!
 * Checkpoints allow you to review and approve changes to the site
